<resources>
    <string name="app_name">Popular Movies</string>
    <string name="sort_by_popular">Most Popular</string>
    <string name="sort_by_most_rated">Most rated</string>
    <string name="overview">Overview : </string>
    <string name="averageVote">Aevrage Vote : </string>
    <string name="releaseDate">Release Date : </string>
    <string name="now_playing">Now Playing</string>
    <string name="tailerName">Trailer Name</string>
    <string name="movies">movies</string>
    <string name="sort_by_most_favourites">Favourites</string>
    <string name="Add_to_favourits">Add to favourits</string>
</resources>
