<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/now_playing"
        android:title="@string/now_playing"
        app:showAsAction="never"/>
    <item
        android:id="@+id/sort_by_popular"
        android:title="@string/sort_by_popular"
        app:showAsAction="never"/>
    <item
        android:id="@+id/sort_by_most_rated"
        android:title="@string/sort_by_most_rated"
        app:showAsAction="never"/>
    <item
        android:id="@+id/sort_by_favourites"
        android:title="@string/sort_by_most_favourites"
        app:showAsAction="never"/>
</menu>